# ii-5

./: LICENSE  README.md  environment  pyproject.toml
src/: idz1.py  primer.py  z1.py  z2.py
src/synthetic_tree/dir3/subdir1/: duplicate3.txt
